--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,6 @@
             ]
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
