--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.13.0",
-        "symfony/process": "^6.2",
-        "symfony/yaml": "^6.2"
+        "symfony/process": "^6.2|^7.0",
+        "symfony/yaml": "^6.2|^7.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
